# raytracer-rust

./: .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test-build.yml
assets/scenes/: test01.yaml
src/: graphics.rs  loader.rs  main.rs  math.rs  maths.rs  scene.rs
src/graphics/: patterns.rs
src/math/: colors.rs  matrices.rs  transforms.rs  tuples.rs
src/maths/: colors.rs  matrices.rs  rays.rs  transforms.rs  tuples.rs  vectors.rs
src/scene/: cameras.rs  lighting.rs  lights.rs  materials.rs  shapes.rs  spheres.rs
src/scene/shapes/: planes.rs  spheres.rs
