[package]
name = "rusttracer"
version = "0.1.0"
authors = ["Matt Kleinschafer <xeusalmighty@gmail.com>"]

[profile.dev.package."*"]
opt-level = 2

[profile.release.build-override]
opt-level = 0

[dependencies]
cgmath = { version = "0.16.1", default-features = false }
image = { version = "0.19.0", default-features = false, features = ["png_codec"] }