[package]
name = "raytracer"
version = "0.1.0"
authors = ["Matt Kleinschafer <xeusalmighty@gmail.com>"]
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0.57"
image = { version = "0.24.2", default-features = false, features = ["png"] }